add header authorize header for swagger
